# cloudrecord/api/records/post.go
@@ -9,34 +9,38 @@ import (
 	"github.com/qq51529210/util"
 )
 
+const (
+	dayDuration = 24 * 3600
+)
+
 type postReq struct {
-	// 创建时间
-	CreateTime int64 `json:"createTime" binding:"required,min=1"`
-	// 时长
-	Duration float64 ` json:"duration" binding:"required,min=1"`
-	// 大小
-	Size int64 `json:"size" binding:"required,min=1"`
 	// minio 的标识
 	ID string `json:"name" binding:"required,max=40"`
-	// app
-	App string `json:"app" binding:"required,max=64"`
 	// stream
 	Stream string `json:"stream" binding:"required,max=64"`
+	// 大小
+	Size int64 `json:"size" binding:"required,min=1"`
+	// 时长
+	Duration float64 ` json:"duration" binding:"required,min=1"`
+	// 创建时间
+	Time int64 `json:"time" binding:"required,min=1"`
 	// 保存天数
 	SaveDays int64 `json:"saveDays" binding:"required,min=0"`
 	// 是否在录像时间内
 	IsRecording bool `json:"isRecording"`
+	// app
+	App string `json:"app" binding:"required,max=64"`
 }
 
-//	@Summary	添加
-//	@Tags		云端录像
-//	@Param		data	body	postReq	true	"数据"
-//	@Accept		json
-//	@Produce	json
-//	@Success	201	{object}	internal.IDResult[string]
-//	@Failure	400	{object}	internal.Error
-//	@Failure	500	{object}	internal.Error
-//	@Router		/records [post]
+// @Summary	添加
+// @Tags		云端录像
+// @Param		data	body	postReq	true	"数据"
+// @Accept		json
+// @Produce	json
+// @Success	201	{object}	internal.IDResult[string]
+// @Failure	400	{object}	internal.Error
+// @Failure	500	{object}	internal.Error
+// @Router		/records [post]
 func post(ctx *gin.Context) {
 	// 参数
 	var req postReq
@@ -48,6 +52,10 @@ func post(ctx *gin.Context) {
 	// 数据库
 	var model db.Record
 	util.CopyStruct(&model, &req)
+	model.DeleteTime = req.Time + dayDuration*req.SaveDays
+	if req.IsRecording {
+		model.IsDeleted = &db.Enable
+	}
 	_, err = db.AddRecord(&model)
 	if err != nil {
 		internal.HandleDB500(ctx, err)
